Added linked-in profile

--- a/angular.json
+++ b/angular.json
@@ -136,5 +136,8 @@
       }
     }
   },
-  "defaultProject": "shadahmio"
+  "defaultProject": "shadahmio",
+  "cli": {
+    "analytics": false
+  }
 }
