Changes to resume portion

--- a/src/assets/data/key-project-achievements.json
+++ b/src/assets/data/key-project-achievements.json
@@ -2,7 +2,7 @@
     {
         "title": "Jobs API / Subcontractor Portal",
         "fromDate": "2016-11-01T00:00:00.000Z",
-        "toDate": null,
+        "toDate": "2019-11-01T00:00:00.000Z",
         "companyName": "City Facilities Management",
         "clientName": "(inhouse software applications)",
         "projectRole": "Development",
