--- a/src/assets/data/key-project-achievements.json
+++ b/src/assets/data/key-project-achievements.json
@@ -1,72 +1,150 @@
 [
     {
-        "title": "Jobs API / Subcontractor Portal",
+        "title": "Asset Integrity Management Tools",
+        "fromDate": "2021-10-01T00:00:00.000Z",
+        "toDate": "2022-03-01T00:00:00.000Z",
+        "companyName": "Ørsted",
+        "clientName": "Ørsted",
+        "projectRole": "Senior Software Developer",
+        "technologiesUsed": [
+            ".NET 5",
+            "Angular",
+            "Azure Cosmos",
+            "Azure Functions",
+            "Azure Service Bus",
+            "Azure Blob Storage"
+        ],
+        "description": "Ørsted is a Danish energy company where I worked as an inhouse developer. Ørsted works with multiple other companies for inspection of their assets. These companies gather inspection data which they keep in their own data store. The need was for Ørsted to be able to own the data, and being able to keep them in one place. Hence the need for Asset Integrity Management tools, a data-aggragator of sort where these data are collected and put together into one data store.",
+        "jobResponsibilities": [
+            "Software development"
+        ],
+        "htmlElementId": "h3projAimTools",    
+        "includeAsKeyAchievement": true
+    },
+    {
+        "title": "Flexible Maintenance Tools",
+        "fromDate": "2019-11-01T00:00:00.000Z",
+        "toDate": "2021-10-01T00:00:00.000Z",
+        "companyName": "Ørsted",
+        "clientName": "Ørsted",
+        "projectRole": "Senior Software Developer",
+        "technologiesUsed": [
+            ".NET Core 3.1",
+            "Angular",
+            "SQL Server",
+            "EF Core"
+        ],
+        "description": "Ørsted is a Danish energy company where I worked as an inhouse developer. This project was a maintenance application for Offshore Wind Farms. It is a web application that allows engineering teams to maintain and schedule maintenance plans for wind turbines. This involves editing of a construct called \"Task Lists\" which consists of operations/tasks that needed to be performed on a turbine's maintenance yearly. The Task Lists then gets finalized and sent to a SAP service where it generates work orders for technicians to perform their duties.",
+        "jobResponsibilities": [
+            "Software development"
+        ],
+        "htmlElementId": "h3projAimTools",    
+        "includeAsKeyAchievement": true
+    },
+    {
+        "title": "Asset Management System/Job Management System/Subcontractor Portal",
         "fromDate": "2016-11-01T00:00:00.000Z",
         "toDate": "2019-11-01T00:00:00.000Z",
         "companyName": "City Facilities Management",
         "clientName": "City Facilities Management",
-        "projectRole": "Development",
-        "technologiesUsed": "ASP.NET MVC, ASP.NET Web Api, .NET Core, EF Core, Angular 2+, AngularJs, Azure DevOps",
-        "description": "My job in this company involves continous development in a number of in-house applications that are assigned to my team. The two that I choose to name here are Jobs API, and Subcontractor Portal. This company keeps tracks of millions of facilities maintenance jobs performed by subcontractors, across 3 countries. The subcontractor portal (which integrates with Jobs API) allows the subcontractors to close down jobs, submit invoices, upgrades, and browse documents. The subcontractor portal uses a dual authorization system with ADFS-based SSO (for internal users), and OpenID Connect (for external users). The Jobs API uses OAuth authentication.",
+        "projectRole": "Senior Software Developer",
+        "technologiesUsed": [
+            "ASP.NET MVC",
+            "ASP.NET Web Api",
+            ".NET Core",
+            "EntityFramework",
+            "Angular 2+",
+            "AngularJs",
+            "Azure DevOps"
+        ],
+        "description": "City Facilities Management (CityFM) is a company that does facilities management i.e: upkeeping and repairs for facilities, mainly grocery stores and supermarket. I worked there as an in-house developer, where I had to develop and maintain multiple applications.\r\nThis company keeps tracks of millions of jobs performed by technicians and subcontractors, across multiple countries. It also keeps tracks with the inventory of assets owned by facilities (e.g: refrigerators in a convenience stores). The applications that I had to develop and maintain supports the way the business ran. These include Asset Management System, Job Management System, and Subcontractor Portal.",
         "jobResponsibilities": [
             "Software development",
-            "Integration between one application with another",
-            "Branch-merging and deployment into UAT",
-            "Attend requirement gathering meetings"
+            "Bug fixes and maintenance",
+            "Perform job interviews"
         ],
-        "htmlElementId": "h3projActivities",
+        "htmlElementId": "h3projCity",    
         "includeAsKeyAchievement": true
     },
     {
         "title": "Intelligent Tourism",
         "fromDate": "2015-11-01T00:00:00.000Z",
-        "toDate": "2016-10-01T00:00:00.000Z",
+        "toDate": "2016-11-01T00:00:00.000Z",
         "companyName": "Galasys Solutions",
         "clientName": "Galasys Solutions",
-        "projectRole": "Development/Team Lead",
-        "technologiesUsed": "ASP.NET MVC, ASP.NET Web Api 2, WCF, AngularJs, Bootstrap",
-        "description": "I listed Intelligent Tourism here because it was by far the most ambitious project that I have ever been involved in. iTourism was not an application, but an ecosystem. Containing an eCommerce site (the B2C), an admin site (the B2B), a point-of-sale (POS) system, and a Web Api as a central system, that can also be consumed by third-party B2C partner sites. My primary development contribution was in the Web Api side of things, but I was also placed as an informal lead of the B2C team. The project was ultimately a failure as it did not come to fruition, and the company eventually closed down.",
-        "jobResponsibilities": [
-            "Acted as Software Developer for the project, and as a Team Lead to one of the project’s teams. Leads and manages a team of up to 4 team members during project, covering Web Designers, QA Engineers and Software Engineers.",
-            "Coding and software design",
-            "Runs SCRUM meeting / daily stand-ups",
-            "Once in every 2 weeks, conducts iteration planning and retrospective",
-            "Appointed as Single Point of Contact (SPOC) for third party B2C integration partner",
-            "Prepares and provides API releases documentation to partners."
+        "projectRole": "Senior Software Developer",
+        "technologiesUsed": [
+            "ASP.NET MVC",
+            "ASP.NET Web Api",
+            "AngularJs",
+            "SQL Server"
         ],
-        "htmlElementId": "h3projIntelligent",
+        "description": "The Intelligent Tourism project ultimately did not come into fruition, as the company closes down. But it was an ambitious project of creating an application suite that centralises ticket sales. The goal was to have a site (called B2B) where small vendors set their tickets and offers and then they would all be publicly offered on another site (B2C). The vendors could also have their own front-end site instead, and it would be connecting to the database via the web API.",
+        "jobResponsibilities": [
+            "Software development",
+            "Running daily stand up meetings"
+        ],
+        "htmlElementId": "h3projItourism",    
         "includeAsKeyAchievement": true
     },
     {
         "title": "Submission Tracking and Rating System",
-        "fromDate": "2014-10-01T00:00:00.000Z",
+        "fromDate": "2015-01-01T00:00:00.000Z",
         "toDate": "2015-11-01T00:00:00.000Z",
         "companyName": "Alfacom Technologies",
-        "clientName": "Perbadanan Insurans Deposit Malaysia (PIDM)",
-        "projectRole": "Development/Requirement Gathering",
-        "technologiesUsed": "ASP.NET MVC, WPF, AngularJs, Bootstrap, SQL Server Reporting Services",
-        "description": "STARS was a memorable project for me as it was fun to develop for. Through this project I get to see the amount of efficiency that can be gained from a good software solution. Our client was an organization that enforces all banks in Malaysia to submit a set of documents each year, the submitted documents (which are normally in the form of large Excel files) are normally given to the client's staff by a hard disk, and then manually processed to output a \"Rating\" that determines a bank's premium. This process takes them many weeks to complete, which through our software was largely reduced.",
-        "jobResponsibilities": [
-            "Met the users to study requirements.",
-            "Co-authored the User Requirement Specification (URS) Document with a senior.",
-            "Performed coding and software development. "
+        "clientName": "Perbadanan Insurans Deposit Malaysia (PIDM) / Malaysia Deposit Insurance Corporation",
+        "projectRole": "Senior Developer",
+        "technologiesUsed": [
+            "WPF",
+            "ASP.NET MVC",
+            "SQL Server"
         ],
-        "htmlElementId": "h3projStar",
+        "description": "PIDM is a government agency whose purpose is protect bank depositors and owners of insurance policies in the event of a member institution failure.\r\nEvery year all banks in Malaysia are tasked to provide PIDM a set of documents. They would normally receive these documents manually, via hard drive, and the team members at PIDM has to do the same task repetitively to extract the data from these documents and organizing it into the format that they want. This data is finally used for calculating risks and evaluating the banks' readiness for a payout in the event of failure.\r\nThe application we called STARS (Submission Tracking and Rating System) has the purpose of automating a lot of the tasks mentioned above. Reducing weeks of manual work into hours.",
+        "jobResponsibilities": [
+            "Software development",
+            "Requirement gathering and co-authoring the User Requirement Specifications document (URS)"
+        ],
+        "htmlElementId": "h3projStars",    
         "includeAsKeyAchievement": true
     },
     {
-        "title": "Capital Gains Tax Worksheets",
-        "fromDate": "2013-05-01T00:00:00.000Z",
-        "toDate": "2014-09-01T00:00:00.000Z",
+        "title": "Capital Gains Tax Reporter Worksheet",
+        "fromDate": "2013-03-01T00:00:00.000Z",
+        "toDate": "2015-01-01T00:00:00.000Z",
         "companyName": "Alfacom Technologies",
-        "clientName": "Wolters Kluwer Asia Pacific",
-        "projectRole": "Development",
-        "technologiesUsed": "ASP.NET Web Forms, ADO.NET, MySQL, jQuery, Telerik RadControls",
-        "description": "Capital Gains Tax Worksheets (or CGTW) was my earliest experience working with a large team, and my first experience working with SCRUM. Throughout the project, there was an average of 5 developers and 2 testers within the development team. The application's core purpose is processing historical stocks data with the intent of calculating and predicting capital gains tax.  Architecturally, it was a ASP.NET Web Forms project with ADO.NET data access layer. This project had a heavy reliance on Stored Procedures.",
-        "jobResponsibilities": [
-            "Performed coding and software development. "
+        "clientName": "Wolters Kluwer",
+        "projectRole": "Junior Software Developer / Software Developer",
+        "technologiesUsed": [
+            ".NET Web Forms",
+            "jQuery",
+            "ADO.NET",
+            "Telerik UI for ASP.NET AJAX"
         ],
-        "htmlElementId": "h3projCgtw",
+        "description": "Wolters Kluwer had at the time had an office in Malaysia for Wolters Kluwer Asia Pacific. We were working on a project called CGT Reporter Worksheet, and the purpose of this application was to keep track of shareholding histories that is used to calculate the Capital Gains Tax (CGT).\r\n\r\nThe application was a monolithic web application that is running on an SQL Server database, to which it connects using ADO.NET. The database contains all of the data about the history of shareholding prices, and the events that affect them. These data is then used for producing the history of capital gain taxes, as well as predicted taxes.",
+        "jobResponsibilities": [
+            "Software development",
+            "Take part in daily meetings and sprint ceremonies at the customers' office"
+        ],
+        "htmlElementId": "h3projCgtw",    
+        "includeAsKeyAchievement": true
+    },    
+    {
+        "title": "ePayslip",
+        "fromDate": "2013-04-01T00:00:00.000Z",
+        "toDate": "2013-06-01T00:00:00.000Z",
+        "companyName": "Alfacom Technologies",
+        "clientName": "Accounting Department of Malaysia",
+        "projectRole": "Junior Software Developer",
+        "technologiesUsed": [
+            ".NET Web Forms",
+            "jQuery"
+        ],
+        "description": "This was my first assignment. The Accounting Department of Malaysia has a web portal where all civil servants can go and download their payslips. My first assignment was to add a page where the users can edit their contact details such as e-mail for the purpose of password reset.",
+        "jobResponsibilities": [
+            "Software development",
+            "Assisting a team lead in adding a functionality to an existing application"
+        ],
+        "htmlElementId": "h3projCgtw",    
         "includeAsKeyAchievement": true
     }
 ]
